# enkit

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  requirements.in  requirements.txt
allocation_manager/client/: BUILD.bazel  client.go
allocation_manager/proto/: BUILD.bazel  allocation_manager.proto  config.proto
allocation_manager/server/: BUILD.bazel  main.go
allocation_manager/service/: BUILD.bazel  queue.go  queue_test.go  service.go  service_test.go  unit.go  unit_test.go
astore/: e2e_test.go  server_test.go
astore/atesting/: BUILD.bazel  mocks.go
astore/client/: BUILD.bazel  main.go
astore/rpc/astore/: BUILD.bazel
astore/server/: BUILD.bazel  main.go
auth/common/: BUILD.bazel
auth/proto/: BUILD.bazel
bazel/appengine/: defs.bzl  module_path.bzl
bazel/enkit_credential_helper/: BUILD.bazel  main.go
bazel/gazelle/: BUILD.bazel  def.bzl  default_gazelle_overrides.bzl  default_patches.bzl  extensions.bzl  go_deps.bzl
bazel/go/: BUILD.bazel
bazel/go_extras/: BUILD.bazel
bazel/linux/: README.md  repository.bzl
bazel/oci/: BUILD.bazel
bazel/patches/: BUILD.bazel
bazel/proto/: BUILD.bazel  py_proto_library.bzl
bazel/qtc/: BUILD.bazel
bazel/utils/: BUILD.bazel  validate.bzl
bb_reporter/: BUILD.bazel  main.go
bb_reporter/reporter/: BUILD.bazel
bes_publisher/: BUILD.bazel  main.go
bes_publisher/buildevent/: BUILD.bazel  errslice.go  service.go  service_test.go
bestie/proto/: BUILD.bazel  test_metrics.proto
bestie/server/: BUILD.bazel  main.go  test_result.go
build_nark/: BUILD.bazel  main.go
enkit/: BUILD.bazel  main.go
enkit/cmd/: BUILD.bazel  (+1 more)
faketree/: BUILD.bazel  README.md  faketree.go  faketree_test.sh
flextape/proto/: BUILD.bazel  config.proto  flextape.proto
kbuild/: BUILD.bazel  main.go
lib/bazel/proto/: BUILD.bazel  empty.go
lib/config/: BUILD.bazel  bench_test.go  bind.go  conformance_test.go  doc.go  key_codec.go  list_helpers.go  list_options.go  list_options_test.go  multi.go  multi_test.go  namespace.go  path.go  path_test.go  scope.go  scope_test.go  simple.go  simple_test.go  store.go  store_test.go
lib/config/bbolt/: BUILD.bazel  bbolt.go  bbolt_test.go
lib/config/blob/: BUILD.bazel  blob.go  codec_store.go  codec_store_test.go  metadata.go  metadata_test.go  scope.go  serve.go  serve_test.go  url_codec.go  url_codec_test.go  workspace.go  workspace_test.go
lib/config/blob/s3/: BUILD.bazel  flags.go  s3.go  s3_test.go
lib/config/cli/: BUILD.bazel  enconfig_test.sh  main.go
lib/config/commands/: BUILD.bazel  backup.go  commands.go  convert.go  find.go  get.go  grep.go  helpers.go  list.go  put.go  restore.go
lib/config/cryptstore/: BUILD.bazel  cryptstore.go  cryptstore_test.go  doc.go  flags.go  token_codec.go  wrappers.go
lib/config/datastore/: BUILD.bazel  datastore.go
lib/config/defcon/: BUILD.bazel  default.go
lib/config/directory/: BUILD.bazel  backend.go  homedir.go  homedir_test.go
lib/config/factory/: BUILD.bazel  factory.go  factory_test.go  workspace.go
lib/config/identity/: BUILD.bazel  identity.go
lib/config/marshal/: BUILD.bazel  marshal.go  select.go  select_test.go
lib/config/memory/: BUILD.bazel  backend.go  memory.go  memory_test.go  store.go  store_test.go  workspace.go
lib/config/remote/: BUILD.bazel  remote.go
lib/config/safe/: BUILD.bazel  safe.go  safe_test.go
lib/config/sqlite/: BUILD.bazel  sqlite.go  sqlite_test.go
lib/config/trace/: BUILD.bazel  trace.go
lib/config/typed/: BUILD.bazel  typed.go  typed_test.go
lib/heapdump/: BUILD.bazel
lib/kemail/: BUILD.bazel  dialer.go  doc.go  sender.go  sender_test.go  shared_sender.go  transactional.go  transactional_test.go
lib/khttp/: BUILD.bazel  dispatch.go  remoteip.go  replaceable.go  replaceable_test.go  server.go  server_test.go  utils.go
lib/khttp/downloader/: BUILD.bazel  downloader.go  downloader_test.go
lib/khttp/kassets/: BUILD.bazel  assets.go  assets_test.go  embeds.go  embeds_test.go
lib/khttp/kcache/: BUILD.bazel  cache.go  cache_test.go
lib/khttp/kclient/: BUILD.bazel  client.go
lib/khttp/kcookie/: BUILD.bazel  cookie.go
lib/khttp/kgrpc/: BUILD.bazel  grpc.go  grpc_test.go  origin.go
lib/khttp/kgrpc/testdata/proto/: BUILD.bazel  test.proto
lib/khttp/krequest/: BUILD.bazel  request.go
lib/khttp/krequestlog/: BUILD.bazel  grpc.go  http.go  krequestlog_test.go  logger.go  writer.go
lib/khttp/kserver/: BUILD.bazel  server.go
lib/khttp/ktest/: BUILD.bazel  server.go
lib/khttp/ktls/: BUILD.bazel  tls.go
lib/khttp/ktransport/: BUILD.bazel  transport.go
lib/khttp/protocol/: BUILD.bazel  get.go  writers.go
lib/khttp/scheduler/: BUILD.bazel
lib/khttp/workpool/: BUILD.bazel  helpers.go  helpers_test.go  workpool.go
lib/oauth/: BUILD.bazel  authenticator.go  extractor.go  factory.go  factory_test.go  handlers.go  multi.go  oauth.go  redirector.go  types.go  utils.go  verifier.go
lib/oauth/cli/: BUILD.bazel  main.go
lib/oauth/cookie/: BUILD.bazel  cookie.go
lib/oauth/ogithub/: BUILD.bazel  github.go
lib/oauth/ogoogle/: BUILD.bazel  google.go  google_test.go
lib/oauth/ogrpc/: BUILD.bazel  ogrpc.go
lib/oauth/omail/: BUILD.bazel  authenticator.go  authenticator_test.go  emailer.go  emailer_test.go  test_utils.go
lib/oauth/otesting/: BUILD.bazel  assume_auth.go
lib/oauth/providers/: BUILD.bazel  groups.go  providers.go
lib/srand/: BUILD.bazel  random.go
machinist/: BUILD.bazel  command.go
machinist/machine/: BUILD.bazel  commands.go  factory.go  node.go  templates.go  templates_test.go
machinist/machine/assets/: BUILD.bazel
machinist/rpc/: BUILD.bazel
machinist/state/: BUILD.bazel  controlplane.go  controlplane_test.go
machinist/testing/: BUILD.bazel  machinist_e2e_test.go
monitor/: BUILD.bazel  main.go
proxy/: BUILD.bazel  main.go
proxy/amux/: BUILD.bazel  mux.go  mux_test.go
proxy/amux/amuxie/: BUILD.bazel  amuxie.go
proxy/utils/: BUILD.bazel  host.go  metrics.go  whitelist.go  whitelist_test.go
scripts/: BUILD.bazel  gee
scripts/tests/: BUILD.bazel  gee.bats
staco/: BUILD.bazel  README.md  main.go
(+319 files in other folders)
