load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("//bazel/gazelle:def.bzl", "gazelle")

# To update and generate the BUILD.bazel files, run:
#     bazelisk run //:gazelle
#
# This will scan the source code, and based on imports, generate
# or update the BUILD.bazel files. Run every time you change imports,
# create a new library or binary.
#
# After changing go.mod or go.sum, run:
#     bazelisk run //tools/go:update_go_deps
#
# This will tidy the Go module, regenerate BUILD files, and sync the
# module lock and use_repo wiring in MODULE.bazel.
#

# Set the prefix for this repo
# gazelle:prefix github.com/ccontavalli/enkit

# When adding protos used by Go, typically the import path is the same as the
# proto's containing dir. However, this will confuse Go tooling (`go mod tidy`,
# for instance) when there are no source files present.
#
# To work around this, add a source file called `empty.go` with only a package
# declaration, so from the Go tooling's perspective it is a legitimate package.
# The directive below will prevent `empty.go` files from being added to
# Gazelle-generated rules.
#
# gazelle:exclude **/empty.go

# Ensure that BUILD files have targets generated with the correct convention.
# gazelle:go_naming_convention import
gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/ccontavalli/enkit",
)

# Repository-local Gazelle settings.
# gazelle:go_grpc_compilers	//bazel/go:go_grpc

exports_files(
    [
        "go.mod",
        "go.sum",
    ],
    visibility = ["//:__subpackages__"],
)

# To automatically format all .bzl files and all BUILD.bzl files, run:
#     bazelisk run //:buildifier
buildifier(name = "buildifier")

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

multirun(
    name = "binaries_release",
    commands = [
        "//enkit:deploy",
        "//staco:deploy",
        "//faketree:astore_push",
        "//flextape/server:astore_push",
        "//flextape/client/flextape_client:astore_push",
    ],
)

compile_pip_requirements(
    name = "python_deps",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

string_flag(
    name = "kernel_dir",
    build_setting_default = "placeholder",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "kernel_dir_placeholder",
    flag_values = {":kernel_dir": "placeholder"},
    visibility = ["//visibility:public"],
)
