load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "auth_proto",
    srcs = ["auth.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "auth_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc_v2",
        "@rules_go//proto:go_proto",
    ],
    importpath = "github.com/ccontavalli/enkit/auth/proto",
    proto = ":auth_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":auth_go_proto"],
    importpath = "github.com/ccontavalli/enkit/auth/proto",
    visibility = ["//visibility:public"],
)
