load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "flextape_proto",
    srcs = ["flextape.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        ":flextape_proto",
    ],
)

go_proto_library(
    name = "flextape_go_proto",
    compilers = ["//bazel/go:go_grpc"],
    importpath = "github.com/ccontavalli/enkit/flextape/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [
        ":flextape_go_proto",
    ],
    importpath = "github.com/ccontavalli/enkit/flextape/proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "proto_proto",
    srcs = [
        "config.proto",
        "flextape.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:timestamp_proto"],
)
