load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "bind.go",
        "doc.go",
        "key_codec.go",
        "multi.go",
        "simple.go",
        "store.go",
    ],
    importpath = "github.com/ccontavalli/enkit/lib/config",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config/marshal",
        "//lib/multierror",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "bench_test.go",
        "multi_test.go",
        "simple_test.go",
        "store_test.go",
    ],
    embed = [":config"],
    deps = [
        "//lib/config/bbolt",
        "//lib/config/directory",
        "//lib/config/marshal",
        "//lib/config/sqlite",
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//visibility:public"],
)
