load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "heapdump",
    srcs = ["heapdump.go"],
    importpath = "github.com/ccontavalli/enkit/lib/heapdump",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":heapdump",
    visibility = ["//visibility:public"],
)
