load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "khttp",
    srcs = [
        "dispatch.go",
        "remoteip.go",
        "server.go",
        "utils.go",
    ],
    importpath = "github.com/ccontavalli/enkit/lib/khttp",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/goroutine",
        "//lib/kflags",
        "//lib/khttp/kserver",
        "//lib/khttp/ktls",
        "//lib/logger",
        "//lib/multierror",
        "@com_github_kirsle_configdir//:configdir",
        "@org_golang_x_crypto//acme/autocert",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

alias(
    name = "go_default_library",
    actual = ":khttp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "khttp_test",
    srcs = [
        "server_test.go",
        "utils_test.go",
    ],
    embed = [":khttp"],
    deps = [
        "//lib/kflags",
        "@com_github_stretchr_testify//assert",
    ],
)
