load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oauth",
    srcs = [
        "authenticator.go",
        "extractor.go",
        "factory.go",
        "handlers.go",
        "multi.go",
        "oauth.go",
        "redirector.go",
        "types.go",
        "utils.go",
        "verifier.go",
    ],
    importpath = "github.com/ccontavalli/enkit/lib/oauth",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/kcerts",
        "//lib/kflags",
        "//lib/khttp",
        "//lib/khttp/kassets",
        "//lib/khttp/kcookie",
        "//lib/logger",
        "//lib/multierror",
        "//lib/oauth/cookie",
        "//lib/token",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//github",
        "@org_golang_x_oauth2//google",
    ],
)

alias(
    name = "go_default_library",
    actual = ":oauth",
    visibility = ["//visibility:public"],
)

go_test(
    name = "oauth_test",
    srcs = ["factory_test.go"],
    embed = [":oauth"],
    deps = [
        "//lib/srand",
        "//lib/token",
        "@com_github_stretchr_testify//assert",
    ],
)
