load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "srand",
    srcs = ["random.go"],
    importpath = "github.com/ccontavalli/enkit/lib/srand",
    visibility = ["//visibility:public"],
)

go_test(
    name = "srand_test",
    srcs = ["random_test.go"],
    embed = [":srand"],
)
