load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "machine",
    srcs = [
        "commands.go",
        "factory.go",
        "node.go",
        "templates.go",
    ],
    importpath = "github.com/ccontavalli/enkit/machinist/machine",
    visibility = ["//visibility:public"],
    deps = [
        "//auth/proto",
        "//lib/client",
        "//lib/goroutine",
        "//lib/kcerts",
        "//lib/logger",
        "//lib/multierror",
        "//lib/retry",
        "//machinist/config",
        "//machinist/machine/assets",
        "//machinist/polling",
        "//machinist/rpc",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "machine_test",
    srcs = ["templates_test.go"],
    deps = [
        ":machine",
        "//machinist/machine/assets",
        "@com_github_stretchr_testify//assert",
    ],
)
