load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "machinist_proto",
    srcs = [
        "actions.proto",
        "machinist.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "rpc_go_proto",
    compilers = ["//bazel/go:go_grpc"],
    importpath = "github.com/ccontavalli/enkit/machinist/rpc",
    proto = ":machinist_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "rpc",
    embed = [":rpc_go_proto"],
    importpath = "github.com/ccontavalli/enkit/machinist/rpc",
    visibility = ["//visibility:public"],
)
