load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "state",
    srcs = ["controlplane.go"],
    importpath = "github.com/ccontavalli/enkit/machinist/state",
    visibility = ["//visibility:public"],
    deps = ["//lib/config/marshal"],
)

go_test(
    name = "state_test",
    srcs = ["controlplane_test.go"],
    deps = [
        ":state",
        "//lib/srand",
        "@com_github_stretchr_testify//assert",
    ],
)
