load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "testing_test",
    srcs = ["machinist_e2e_test.go"],
    deps = [
        "//lib/knetwork",
        "//lib/knetwork/kdns",
        "//lib/srand",
        "//machinist/config",
        "//machinist/machine",
        "//machinist/mserver",
        "//machinist/state",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
