load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "amux",
    srcs = ["mux.go"],
    importpath = "github.com/ccontavalli/enkit/proxy/amux",
    visibility = ["//visibility:public"],
)

go_test(
    name = "amux_test",
    srcs = ["mux_test.go"],
    deps = [
        ":amux",
        "//proxy/amux/amuxie",
        "@com_github_stretchr_testify//assert",
    ],
)
