load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "atomictime.go",
        "clock.go",
        "counter.go",
        "host.go",
        "metrics.go",
        "types.go",
        "whitelist.go",
    ],
    importpath = "github.com/ccontavalli/enkit/proxy/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/oauth",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)

go_test(
    name = "utils_test",
    srcs = [
        "atomictime_test.go",
        "counter_test.go",
        "whitelist_test.go",
    ],
    embed = [":utils"],
    deps = ["@com_github_stretchr_testify//assert"],
)
