load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

# Gazelle seems to not detect my existing proto_library rules, and
# create new ones with names I don't like. So here you go, gazelle!

proto_library(
    name = "astore_proto",
    srcs = ["astore.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "astore_go_proto",
    compilers = [
        "@rules_go//proto:go_grpc_v2",
        "@rules_go//proto:go_proto",
    ],
    importpath = "github.com/ccontavalli/enkit/astore/rpc/astore",
    proto = ":astore_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "astore",
    embed = [":astore_go_proto"],
    importpath = "github.com/ccontavalli/enkit/astore/rpc/astore",
    visibility = ["//visibility:public"],
)
