load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# keep
genrule(
    name = "stardoc_output_proto_cp",
    srcs = ["@bazel_tools//src/main/protobuf:stardoc_output.proto"],
    outs = ["stardoc_output.proto"],
    cmd = "cp $< $@",
)

# keep
proto_library(
    name = "stardoc_output_proto",
    srcs = [":stardoc_output_proto_cp"],
    import_prefix = "src/main/protobuf",
    strip_import_prefix = "/lib/bazel/proto",
)

# keep
genrule(
    name = "build_proto_cp",
    srcs = ["@bazel_tools//src/main/protobuf:build.proto"],
    outs = ["build.proto"],
    cmd = "cp $< $@",
)

# keep
proto_library(
    name = "build_proto",
    srcs = [":build_proto_cp"],
    deps = [":stardoc_output_proto"],
)

# keep
go_proto_library(
    name = "build_go_proto",
    importpath = "github.com/ccontavalli/enkit/lib/bazel/proto",
    protos = [
        ":build_proto",
        ":stardoc_output_proto",
    ],
    visibility = ["//lib/bazel:__subpackages__"],
)

# keep
proto_library(
    name = "workspace_log_proto",
    srcs = ["workspace_log.proto"],
)

# keep
go_proto_library(
    name = "workspace_log_go_proto",
    importpath = "github.com/ccontavalli/enkit/lib/bazel/proto",
    proto = ":workspace_log_proto",
    visibility = ["//lib/bazel:__subpackages__"],
)

go_library(
    name = "proto",
    embed = [
        ":build_go_proto",  # keep
        ":workspace_log_go_proto",  # keep
    ],
    importpath = "github.com/ccontavalli/enkit/lib/bazel/proto",  # keep
    visibility = ["//lib/bazel:__subpackages__"],
)
