load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/ccontavalli/enkit/lib/config/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/config/commands",
        "//lib/kflags/kcobra",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "enconfig",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "enconfig_sh_test",
    srcs = ["enconfig_test.sh"],
    data = [":enconfig"],
)
