load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "memory",
    srcs = [
        "backend.go",
        "memory.go",
        "store.go",
        "workspace.go",
    ],
    importpath = "github.com/ccontavalli/enkit/lib/config/memory",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
    ],
)

go_test(
    name = "memory_test",
    srcs = [
        "memory_test.go",
        "store_test.go",
    ],
    embed = [":memory"],
    deps = [
        "//lib/config",
        "@com_github_stretchr_testify//assert",
    ],
)

alias(
    name = "go_default_library",
    actual = ":memory",
    visibility = ["//visibility:public"],
)
